--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,48 @@
 {% extends "base.html" %}    
 {% block content %}
-    <h1>About Page</h1>
+    <h2>About Page</h2>
+    <p>
+        The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest
+        in recapturing his long lost family inheritance. (Thorin's grandfather had been the king of the Lonely Mountain
+        when Smaug came and took it.) Remembering that he had once known an adventurous Hobbit on his travels in the
+        Shire, Gandalf decided to add Bilbo to their company because he knew that stealth and cunning were preferable to
+        force. Gandalf also believed that someone like Bilbo could keep the sometimes prideful and stubborn Dwarves from
+        rash action. The superstitious Dwarves also considered thirteen to be an unlucky number, and as Gandalf had
+        planned to leave on other business, welcomed a fourteenth to fill into their party.
+    </p>
+
+    <div class="row featurette">
+        <div class="col-md-7">
+            <h3>Thorin Oakenshield</h3>
+            <p>
+                Thorin II was born in TA 2746 to Dwarven prince Thráin II in the city of The Lonely Mountain. Early in
+                his youth, he and the other Dwarves of the Lonely Mountain were forced to flee by the dragon Smaug in TA
+                2770. While in exile, he quickly grew to become a capable warrior. This was demonstrated when he
+                participated in the Battle of Azanulbizar in TA 2799. He fought with one of the Dwarven armies beneath
+                the East-gate of Moria. At some point in the fighting, his shield broke, and using an oaken tree branch
+                found on the floor as a shield, he gained the epithet "Oakenshield," which would remain with him even in
+                death.
+
+                Thorin eventually became King-in-Exile of Durin's Folk after his father went missing, and died in the
+                dungeons of Dol Guldur.
+            </p>
+        </div>
+        <div class="col-md-5">
+            <img src="https://s-media-cache-ak0.pinimg.com/736x/8f/3d/93/8f3d93b2b0eb6821f4c2df3b43a32341.jpg" alt="Thorin Oakenshield">
+        </div>
+    </div>
+
+    <div class="row featurette">
+        <div class="col-md-5">
+            <img src="https://i.pinimg.com/originals/6d/d1/8f/6dd18f7231547123d271d7b45e2795a9.jpg" alt="">
+        </div>
+        <div class="col-md-7">
+            <h3>Fili and Kili</h3>
+            <p>
+                Fíli and Kíli were nephews of Thorin, who was the elder brother of their mother Dís. They were also
+                nephews of Frerin, grandsons of Thráin II, and great-grandsons of Thrór. Fíli's most distinguishing
+                feature was his long nose, the longest of any of the Dwarves in Thorin's company.
+            </p>
+        </div>
+    </div>
 {% endblock %}
