--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}    
 {% block content %}
-    <h2>About Page</h2>
+
+   
+    <h2>{{ page_title }}</h2>
     <p>
         The formation of the group grew out of a meeting Gandalf had with Thorin in Bree which kindled Thorin's interest
         in recapturing his long lost family inheritance. (Thorin's grandfather had been the king of the Lonely Mountain
@@ -11,38 +13,42 @@
         planned to leave on other business, welcomed a fourteenth to fill into their party.
     </p>
 
-    <div class="row featurette">
-        <div class="col-md-7">
-            <h3>Thorin Oakenshield</h3>
-            <p>
-                Thorin II was born in TA 2746 to Dwarven prince Thráin II in the city of The Lonely Mountain. Early in
-                his youth, he and the other Dwarves of the Lonely Mountain were forced to flee by the dragon Smaug in TA
-                2770. While in exile, he quickly grew to become a capable warrior. This was demonstrated when he
-                participated in the Battle of Azanulbizar in TA 2799. He fought with one of the Dwarven armies beneath
-                the East-gate of Moria. At some point in the fighting, his shield broke, and using an oaken tree branch
-                found on the floor as a shield, he gained the epithet "Oakenshield," which would remain with him even in
-                death.
+    {% for member in company %}
 
-                Thorin eventually became King-in-Exile of Durin's Folk after his father went missing, and died in the
-                dungeons of Dol Guldur.
-            </p>
-        </div>
-        <div class="col-md-5">
-            <img src="https://s-media-cache-ak0.pinimg.com/736x/8f/3d/93/8f3d93b2b0eb6821f4c2df3b43a32341.jpg" alt="Thorin Oakenshield">
-        </div>
-    </div>
+    
 
-    <div class="row featurette">
-        <div class="col-md-5">
-            <img src="https://i.pinimg.com/originals/6d/d1/8f/6dd18f7231547123d271d7b45e2795a9.jpg" alt="">
+
+        <div class="row featurette">
+
+            {% if loop.index % 2 != 0 %}
+
+                <div class="col-md-7">
+                    <h3><a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a></h3>
+                    <p>{{ member.description }}</p>
+                </div>
+                <div class="col-md-5">
+                    <img src="{{ member.image_source }}" alt="" class="featurette-image image-responsive">
+                </div>
+            
+            {% else %}
+
+                <div class="col-md-5">
+                    <img src="{{ member.image_source }}" alt="" class="featurette-image image-responsive">
+                </div>
+                <div class="col-md-7">
+                    <h3><a href="/about/{{ member.url }}">{{ loop.index }}. {{ member.name }}</a></h3>
+                    <p>{{ member.description }}</p>
+                </div>
+            
+            {% endif %}
         </div>
-        <div class="col-md-7">
-            <h3>Fili and Kili</h3>
-            <p>
-                Fíli and Kíli were nephews of Thorin, who was the elder brother of their mother Dís. They were also
-                nephews of Frerin, grandsons of Thráin II, and great-grandsons of Thrór. Fíli's most distinguishing
-                feature was his long nose, the longest of any of the Dwarves in Thorin's company.
-            </p>
-        </div>
-    </div>
+        
+        {% if loop.index != loop.length %}
+
+            <hr class="featurette-divider">
+
+        {% endif %}
+
+    {% endfor %}
+    
 {% endblock %}
